# retrovue

./: .cursorrules  .gitignore  CANONICAL_RULE_LEDGER.md  CLAUDE.md  CONTRACT_TEST_LOG_MATRIX.md  GAP_REPORT.md  INCIDENT_DIAGNOSIS.md  INGEST_ORCHESTRATOR_REBUILD.md  LOGGING_DELTA_SPEC.md  MIGRATION_PLAN.md  NEXTSTEPS.md  PHASE_ARCHIVE_INDEX.md  Phase 0 Contract.md  Phase 1 Contract.md  Phase 2 Contract.md  Phase 2.5 Contract.md  Phase 3 Contract.md  Phase 4 Contract.md  Phase 5 Contract.md  Phase 6 Contract.md  Phase 6A Contract.md  Phase 7 Contract.md  README.md  RULE_CANDIDATES.json  RULE_HARVEST.json  retrovue-gap-analysis-report.md
pkg/air/: .gitmodules  BUILD_CONTRACTS.sh  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTALL_VCPKG_PACKAGES.sh  README.md  THICK PROMPT.md
pkg/air/core_test_harness/: __init__.py  file_decoder.py  renderer_stub.py  run_harness.py  video_file_decoder.py
pkg/air/docs/: ACTION-PLAN-RationalFps-Migration.md  DEBUG-VLC-NO-OUTPUT-RUNBOOK.md  DELETED_FILES_INVESTIGATION.md  FIX-segment-seam-race.md  ProducerBus-Retirement-Checklist.md  RATIONAL_FPS_LOSSY_BOUNDARIES.md  README.md  ROADMAP_AUDIO_VIDEO_DECOUPLING.md  TEST_PLAN_LIVENESS_SEPARATION.md  TickProducer.md  docs-layout-migration-plan.md  docs-layout-validation-report.md
pkg/air/docs/architecture/: ArchitectureOverview.md
pkg/air/docs/archive/: AIR_COMPONENT_AUDIT.md
pkg/air/docs/contracts/: AUDIO_FIRST_DECODE_UNDER_BACKPRESSURE.md  AirArchitectureReference.md  AirExecutionEvidenceEmitterContract_v0.1.md  AirExecutionEvidenceSpoolContract_v0.1.md  AsRunTimelineContract_v0.1.md  INV-BLOCK-FRAME-BUDGET-AUTHORITY.md  INV-BLOCK-LOOKAHEAD-PRIMING.md  INV-BLOCK-WALLCLOCK-FENCE-001.md  INV-FENCE-FALLBACK-SYNC-001.md  INV-HANDOFF-002-PRIMING-DOES-NOT-ADVANCE-FRAME-INDEX.md  INV-LOOKAHEAD-BUFFER-AUTHORITY.md  INV-NO-FLOAT-FPS-TIMEBASE-001.md  INV-SINK-NO-IMPLICIT-EOF.md  INVARIANT-AUDIT-HOUSE-FORMAT-TICK-CADENCE.md  INVARIANTS-INDEX.md  PATCH-PLAN-FRAME-SELECTION-CADENCE-RENAME.md  PROPOSED-INVARIANTS-FROM-HARVEST.md  README.md  RendererContract.md  VideoFileProducerDomainContract.md  frame_selection_cadence.md  mux_interleaver.md  mux_startup_holdoff_contract.md  mux_startup_interleave_contract.md  stream_bootstrap.md  ts_transport_integrity.md
pkg/air/docs/design/: BROADCAST_AUDIO_PROCESSING.md  BROADCAST_AUDIO_PROCESSING_IMPL_PLAN.md  INV-HANDOFF-001-FRAME-STORE-REDESIGN.md  INV-HANDOFF-001-SOURCE-FRAME-TRACE.md  TIME_BASED_RESAMPLING.md
pkg/air/docs/developer/: BuildAndDebug.md  ContractTesting.md  DevelopmentStandards.md  LastMilePrePublishAudit.md  Phase2_Goals.md  QuickStart.md  TimingScenarios.md
pkg/air/docs/domain/: MasterClockDomain.md  PlayoutEngineDomain.md
pkg/air/docs/infra/: Integration.md
pkg/air/docs/milestones/: Phase1_Skeleton.md  Phase2_Complete.md
pkg/air/docs/overview/: ArchitectureOverview.md  GLOSSARY.md  PROJECT_OVERVIEW.md  README.md
pkg/air/docs/tests/: ContractTesting.md
pkg/air/docs/validation/: FPS_PTS_VALIDATION_RUNBOOK.md  FRAME_ALIGNMENT_AHEAD_PAD_RUNTIME_ASSESSMENT.md
pkg/air/include/time/: ITimeSource.hpp
pkg/air/playout/: pts_drift_logger.py  pts_validator.py
pkg/air/scripts/: build_ffmpeg_static.sh  check_rational_timebase.sh  check_rationalfps_hotpath.py  check_rationalfps_hotpath.sh  collect_pad_evidence.py  generate_stubs.py  test_server.py
pkg/air/src/: main.cpp  playout_service.cpp  playout_service.h
pkg/air/src/blockplan/: AudioLookaheadBuffer.cpp  BlockPlanExecutor.cpp  BlockPlanQueue.cpp  BlockPlanTypes.cpp  BlockPlanValidator.cpp  BlockPreloader.cpp  BlockSource.cpp  ContinuousOutputExecutionEngine.cpp  FFmpegDecoderAdapter.cpp  FeederHarness.cpp  FrameIndexedVideoStore.cpp  OutputClock.cpp  PipelineManager.cpp  ProducerPreloader.cpp  RealAssetSource.cpp  RealTimeExecution.cpp  SeamPreparer.cpp  SerialBlockExecutionEngine.cpp  SourcePreloader.cpp  TickProducer.cpp  VideoLookaheadBuffer.cpp
pkg/air/src/buffer/: FrameRingBuffer.cpp
pkg/air/src/decode/: FFmpegDecoder.cpp  FrameProducer.cpp
pkg/air/src/evidence/: EvidenceEmitter.cpp  EvidenceEmitter.hpp  EvidenceSpool.cpp  EvidenceSpool.hpp  GrpcEvidenceClient.cpp  GrpcEvidenceClient.hpp
pkg/air/src/output/: MpegTSOutputSink.cpp  OutputBus.cpp  SinkDiagnostics.cpp  SocketSink.cpp
pkg/air/src/renderer/: FrameRenderer.cpp  ProgramOutput.cpp
pkg/air/src/runtime/: PlayoutControl.cpp  PlayoutControlStateMachine.cpp  PlayoutController.cpp  PlayoutEngine.cpp  PlayoutInterface.cpp  (+4 more)
pkg/air/tests/: ContractRegistry.h  test_evidence_spool.cpp  test_sink.cpp
pkg/core/: .cursorrules  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRACT_ENFORCEMENT.md  CONTRACT_FULFILLMENT_ANALYSIS.md  CONTRIBUTING.md  LICENSE  PHASE0_QUICKSTART.md  Phase0Contract.md  Readme.md  THICK PROMPT.md  __init__.py  activate.sh  air_manager.py  alembic.ini  example_session.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  stream_test.py  test.py
pkg/core/.cursor/: ignore  project.json  rules.json
pkg/core/.github/: PULL_REQUEST_TEMPLATE.md
pkg/core/alembic/: env.py
pkg/core/app/: __init__.py
pkg/core/docs/: GLOSSARY.md  README.md  VERIFICATION_REPORT.md
pkg/core/examples/: async_streaming_demo.py  async_streaming_example.py  compression_middleware_demo.py  concat_generator_demo.py  copy_mode_validation_demo.py  ffmpeg_cmd_example.py  masterclock_usage.py  phase_demo.py  watchdog_demo.py
pkg/core/scripts/: check_db.py  check_localhost_db.py  debug_add.py  debug_table_structure.py  smoke_e2e.sh  test_db_connection.py  test_vlc_playback.py  verify_broadcast_tables_dropped.py  verify_table.py  verify_title_episode_tables_dropped.py
pkg/core/sql/: retrovue_schema_v1.2.1.sql  retrovue_schema_v1.2.2.sql  retrovue_schema_v1.2.3.sql  retrovue_schema_v1.2.sql  schema.sql
pkg/core/src_legacy/: README.md
pkg/core/templates/: debug_ts.html
pkg/core/tests/: CONTRACT_MIGRATION.md  README_source.md  __init__.py  conftest.py  test_grpc_evidence_basic.py  test_grpc_failure_scenarios.py  test_grpc_replay_resume.py  test_traffic_late_bind.py
(+2009 files in other folders)
